# flight_finder_agent

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  flight_finder_system_prompt.txt  pyproject.toml
.github/workflows/: ci.yml
config/: flight_finder.yaml
docs/: 01_research_notes.md  02_architectures_comparison.md  03_agent_prompts.md  03_design.md  03_repo_structure.md  claude-code-cowork-guide.md
docs/adapters/: wizz_air.md
src/flight_finder/: __init__.py  __main__.py  cli.py  config.py
src/flight_finder/common/: __init__.py  airports.py  cache.py  errors.py  logging.py  retry.py  robots.py
src/flight_finder/executors/: __init__.py  base.py  google_flights.py  google_flights_selectors.py  kayak.py  kayak_selectors.py  playwright_base.py  wizz_air.py  wizz_air_selectors.py
src/flight_finder/llm/: __init__.py  anthropic_client.py  client.py
src/flight_finder/models/: __init__.py  capabilities.py  orchestrator.py  plan.py  query.py  result.py
src/flight_finder/normalizer/: __init__.py  dedup.py  filter.py  normalize.py
src/flight_finder/orchestrator/: __init__.py  orchestrator.py
src/flight_finder/planner/: __init__.py  planner.py  prompts.py
src/flight_finder/ranker/: __init__.py  score.py  weights.py
tests/: conftest.py  test_smoke.py
tests/fixtures/mock_pages/: google_flights_search.html  kayak_search.html  wizz_air_search.html
tests/integration/: test_orchestrator.py
tests/live/: test_google_flights_live.py  test_kayak_live.py  test_wizz_air_live.py
tests/unit/common/: test_airports.py  test_cache.py  test_logging.py  test_retry.py  test_robots.py
tests/unit/executors/: test_google_flights.py  test_kayak.py  test_wizz_air.py
tests/unit/models/: test_capabilities.py  test_orchestrator.py  test_plan.py  test_query.py  test_result.py
tests/unit/normalizer/: test_dedup.py  test_filter.py  test_normalize.py
tests/unit/planner/: test_planner.py
tests/unit/ranker/: test_score.py
