[project]
name = "flight-finder"
version = "0.1.0a0"
description = "A free, open-source multi-agent flight search assistant using browser automation."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nir Aderet", email = "niraderet@gmail.com" }]
requires-python = ">=3.11"
keywords = ["flights", "travel", "agent", "playwright", "browser-automation"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = [
    "anthropic>=0.40",
    "playwright>=1.48",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "typer>=0.13",
    "structlog>=24.4",
    "aiosqlite>=0.20",
    "tenacity>=9.0",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-playwright>=0.5",
    "ruff>=0.7",
    "mypy>=1.13",
]
ollama = ["ollama>=0.3"]

[project.scripts]
ff = "flight_finder.cli:app"

[project.urls]
Repository = "https://github.com/Nir-Aderet/flight_finder_agent"
Issues = "https://github.com/Nir-Aderet/flight_finder_agent/issues"

# ---------------------------------------------------------------------------
# Build backend
# ---------------------------------------------------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flight_finder"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # allow assert False in tests

[tool.mypy]
python_version = "3.11"
strict = true
# Strict typing applies to schema/business-logic modules first;
# adapters (browser code) can ease in as they land.
files = [
    "src/flight_finder/models",
    "src/flight_finder/normalizer",
    "src/flight_finder/ranker",
    "src/flight_finder/common",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --strict-markers"
markers = [
    "live: opt-in live tests against real flight sites (deselect with -m 'not live')",
]
